--- a/RapidRecruit/appsettings.json
+++ b/RapidRecruit/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-N85V54H\\MSSQLSERVER02;Initial Catalog=rapidrecruit_dev;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  }
 }
