--- a/RapidRecruit/nginx.conf
+++ b/RapidRecruit/nginx.conf
@@ -1,26 +1,26 @@
-events {
-    worker_connections 1024;
-}
-
-http {
-    upstream backend {
-        server app:80;
+server {
+    listen 80;
+    server_name its.lukakaralic.com;
+    
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
     }
-
-    server {
-        listen 80;
+    
+    location / {
         return 301 https://$host$request_uri;
     }
+}
 
-    server {
-        listen 443 ssl;
-        ssl_certificate /etc/nginx/certs/cert.pem;
-        ssl_certificate_key /etc/nginx/certs/key.pem;
-
-        location / {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
+server {
+    listen 443 ssl;
+    server_name its.lukakaralic.com;
+    
+    ssl_certificate /etc/letsencrypt/live/its.lukakaralic.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/its.lukakaralic.com/privkey.pem;
+    
+    location / {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
