--- a/RapidRecruit/docker-compose.yml
+++ b/RapidRecruit/docker-compose.yml
@@ -28,17 +28,16 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/letsencrypt
-      - ./webroot:/var/www/html
+      - ./certbot/www/:/var/www/certbot/:ro
     depends_on:
       - app
 
   certbot:
-    image: certbot/certbot
+    image: certbot/certbot:latest
     volumes:
-      - ./certs:/etc/letsencrypt
-      - ./webroot:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html -d its.lukakaralic.com --email lukakaralic98@gmail.com --agree-tos --no-eff-email
+      - ./certbot/www/:/var/www/certbot/:rw
+      - ./certbot/conf/:/etc/letsencrypt/:rw
+
 
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
