--- a/RapidRecruit/nginx.conf
+++ b/RapidRecruit/nginx.conf
@@ -1,26 +1,36 @@
-server {
-    listen 80;
-    server_name its.lukakaralic.com;
-    
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
-    
-    location / {
-        return 301 https://$host$request_uri;
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name its.lukakaralic.com;
-    
-    ssl_certificate /etc/letsencrypt/live/its.lukakaralic.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/its.lukakaralic.com/privkey.pem;
-    
-    location / {
-        proxy_pass http://backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+http {
+    upstream backend {
+        server app:80;
+    }
+
+    server {
+        listen 80;
+        server_name its.lukakaralic.com;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name its.lukakaralic.com;
+
+        ssl_certificate /etc/letsencrypt/live/its.lukakaralic.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/its.lukakaralic.com/privkey.pem;
+
+        location / {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 }
