--- a/RapidRecruit/docker-compose.yml
+++ b/RapidRecruit/docker-compose.yml
@@ -1,9 +1,6 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: runtime
+    image: lukakaralic/rapidrecruit:latest
     volumes:
       - uploads:/app/wwwroot/uploads
     depends_on:
@@ -12,14 +9,19 @@ services:
       - ConnectionStrings__DefaultConnection=Server=db;Database=RapidRecruit;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True
 
   migrations:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: migrations
+    image: lukakaralic/rapidrecruit:latest
+    entrypoint: ["dotnet", "ef", "database", "update"]
     depends_on:
       - db
     environment:
       - ConnectionStrings__DefaultConnection=Server=db;Database=RapidRecruit;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True
+
+  watchtower:
+    image: containrrr/watchtower
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - $HOME/.docker/config.json:/config.json
+    command: --interval 30 --cleanup app migrations
 
   nginx:
     image: nginx:alpine
@@ -29,6 +31,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certbot/www/:/var/www/certbot/:ro
+      - ./certbot/conf/:/etc/letsencrypt/:ro
     depends_on:
       - app
 
@@ -37,7 +40,6 @@ services:
     volumes:
       - ./certbot/www/:/var/www/certbot/:rw
       - ./certbot/conf/:/etc/letsencrypt/:rw
-
 
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
