--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
      uses: docker/build-push-action@v5
      with:
        context: .
-       file: ./Dockerfile
+       file: ./RapidRecruit/Dockerfile
        push: true
        tags: lukakaralic/rapidrecruit:latest
        
@@ -31,6 +31,6 @@ jobs:
      uses: docker/build-push-action@v5
      with:
        context: .
-       file: ./Dockerfile.migrations
+       file: ./RapidRecruit/Dockerfile.migrations
        push: true
        tags: lukakaralic/rapidrecruit-migrations:latest
