--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Docker Build and Push
 
 on:
  push:
-   branches: [ main, ci ]
+   branches: [ main ]
  pull_request:
-   branches: [ main, ci ]
+   branches: [ main ]
 
 jobs:
  build:
